--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "*",
     "body-parser": "*",
+    "cors": "^2.8.5",
+    "express": "*",
     "mongoose": "*"
   },
   "author": "Tizil Soni",
