--- a/client/basics/package.json
+++ b/client/basics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basics",
-  "homepage": "https://tizilsoni.github.io/Fullstack/",
+  "homepage": "https://tizilsoni.github.io/Fullstack/client/basics/public",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
